<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/widget_config_title" />
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
				android:text="@string/currency" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:text="@string/account" />
		</RelativeLayout>

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<Spinner android:id="@+id/widg_conf_spn_currency"
				android:layout_weight="1.0" android:layout_width="200sp"
				android:layout_height="wrap_content" />
			<Spinner android:id="@+id/widg_conf_spn_accounts"
				android:layout_weight="1.0" android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button android:id="@+id/widg_conf_btnOk"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:text="@string/save" />
		</RelativeLayout>

	</LinearLayout>

</ScrollView>
