<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" >
    <LinearLayout android:id="@+id/transfer_main" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transfer_value"/>
        <EditText android:id="@+id/transfer_ed_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:numeric="decimal">
            <requestFocus />
        </EditText>

        <TextView android:text="@string/transfer_account_to" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Spinner android:id="@+id/transfer_spn_accounts" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/transfer_btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:text="@string/save"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>